--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@vueuse/core": "^13.9.0",
     "axios": "^1.8.1",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.13.1",
     "pinia": "^2.3.1",
     "vue": "^3.5.13",
     "vue-i18n": "^10.0.6",
@@ -22,6 +24,7 @@
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/test-utils": "^2.4.6",
     "jsdom": "^26.0.0",
+    "sass-embedded": "^1.93.2",
     "vite": "^6.0.11",
     "vite-plugin-vue-devtools": "^7.7.0",
     "vitest": "^3.0.5"
