--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -24,7 +24,7 @@
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/test-utils": "^2.4.6",
     "jsdom": "^26.0.0",
-    "sass-embedded": "^1.93.2",
+    "sass-embedded": "~1.77.0",
     "vite": "^6.0.11",
     "vite-plugin-vue-devtools": "^7.7.0",
     "vitest": "^3.0.5"
