Add pgvector to database

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   db:
-    image: postgres:17
+    image: pgvector/pgvector:pg17-trixie
     environment:
       POSTGRES_DB: instrumentRegistry
       POSTGRES_USER: postgres
