--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,8 @@ services:
     depends_on:
       db:
         condition: service_healthy
+      semantic-search-service:
+        condition: service_healthy
     environment:
       - SECRET_KEY=django-insecure-jx(y9kh31r=)w7h_sn^9av$04%u%2+9x$w%t2v$@zjn41it_x^
       - DB_NAME=instrumentRegistry
@@ -35,5 +37,30 @@ services:
       - DB_HOST=db
       - DB_PORT=5432
 
+  semantic-search-service:
+    build:
+      context: ./semantic_search_service
+      dockerfile: Dockerfile.dev
+    command: >
+      sh -c "set -e;
+            python download_models.py;
+            uvicorn main:app --host 0.0.0.0 --port 8001 --reload"
+    container_name: semantic-search-service
+    ports:
+      - "8001:8001"
+    volumes:
+      - ./semantic_search_service:/app
+      - semantic-models-data:/app/models
+    environment:
+      - FINE_TUNED_OPUS_MT_ID=tommanni/fine-tuned-opus-mt-fi-en
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "curl -fsS http://localhost:8001/healthz || exit 1"]
+      interval: 60s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
+
 volumes:
   postgres_data:
+  semantic-models-data:
