--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.8.1",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
+    "fuse.js": "^7.1.0",
     "pinia": "^2.3.1",
     "vue": "^3.5.13",
     "vue-i18n": "^10.0.6",
