--- a/semantic_search_service/Dockerfile
+++ b/semantic_search_service/Dockerfile
@@ -24,15 +24,18 @@ RUN rm -rf ~/.cache/pip ~/.cache/huggingface
 FROM python:3.13-slim
 WORKDIR /app
 
+# Install curl for healthcheck
+RUN apt-get update && apt-get install -y --no-install-recommends curl && rm -rf /var/lib/apt/lists/*
+
 # Copy only the models from the builder
 COPY --from=builder /app/models /app/models
 
+# Copy Python packages from builder
+COPY --from=builder /usr/local/lib/python3.13/site-packages /usr/local/lib/python3.13/site-packages
+COPY --from=builder /usr/local/bin /usr/local/bin
+
 # Copy application code
 COPY . .
-
-# Install runtime packages including uvicorn
-RUN pip install --no-cache-dir --extra-index-url https://download.pytorch.org/whl/cpu \
-    fastapi uvicorn[standard] pydantic torch transformers sentence-transformers sentencepiece sacremoses deepl watchdog==4.0.0
 
 # Start the application
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8001"]
