--- a/semantic_search_service/requirements.txt
+++ b/semantic_search_service/requirements.txt
@@ -49,3 +49,7 @@ uvloop==0.22.1
 watchdog==4.0.0
 watchfiles==1.1.1
 websockets==15.0.1
+pytest==8.3.4
+httpx==0.28.1
+pytest-mock==3.14.0
+pytest-asyncio==0.25.3
